fix(fuselage): Fixing messages spacing

--- a/packages/fuselage/src/components/Message/Messages.styles.scss
+++ b/packages/fuselage/src/components/Message/Messages.styles.scss
@@ -84,7 +84,7 @@ $message-background-color-highlight: functions.theme(
   }
 
   &--sequential {
-    padding-block: lengths.padding(8);
+    padding-block: lengths.padding(4);
   }
 
   @keyframes background-fade {
